--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,27 +15,48 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     - name: Setup .NET
-      uses: actions/setup-dotnet@v4
+      uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 7.0.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
-    - name: Build Docker image
-      run: docker build -t musab010/album-api:${{ github.sha }} .
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    
-    - name: Push Docker image to Docker Hub
-      run: docker push musab010/album-api:${{ github.sha }}
-    
-
-      
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+        aws-region: us-east-1
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+    - name: Build, tag and push image to Amazon ecr
+      id: build-image
+      env:
+        ECR_REGISTRY: 394760416698.dkr.ecr.us-east-1.amazonaws.com
+        ECR_REPOSITORY: cnsd/album
+      run: |
+        cd Album.Api
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+        docker tag $ECR_REGISTRY/$ECR_REPOSITORY:latest $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.run_number }}
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.run_number }}
+    - name: Fill in the new image ID in the Amazon ECS task definition
+      id: task-def
+      uses: aws-actions/amazon-ecs-render-task-definition@v1
+      with:
+       task-definition: Album.Api/task-definition.json
+       container-name: AlbumContainer
+       image: 394760416698.dkr.ecr.us-east-1.amazonaws.com/cnsd/album:${{github.run_number}}
+    - name: Deploy Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+       task-definition: ${{ steps.task-def.outputs.task-definition }}
+       service: AlbumServiceBlueGreen
+       cluster: AlbumCluster
+       wait-for-service-stability: true
